compute-cluster/gitops/components/mimir/mneudata-basic-auth.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mneudata-basic-auth
  namespace: mimir
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: mimir-mneudata
  basicAuth:
    users:
      name: mimir-basic-auth
