compute-cluster/gitops/components/mimir/mneudata-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir-mneudata
  namespace: mimir
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: envoy-gateway-system
  hostnames:
  - mimir.compute.isis.cclrc.ac.uk
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mneudata-compute
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Scope-OrgID
          value: mneudata-compute
    backendRefs:
    - group: ""
      kind: Service
      name: mimir-gateway
      port: 80
      weight: 1
